package com.example.decisiontable;

record Action<T extends Result>(T result) {
}
