package com.example.decisiontree;

public interface Parameter {
}
